@@ -1,3 +1,7 @@
+= master
+
+* Improve render performance up to 4x in the default case by calling compiled template methods directly (jeremyevans)
+
 = 3.21.0 (2019-06-14)
 
 * Cache compiled templates in development mode, until the template files are modified (jeremyevans)
